--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <h2 class="logo">
-                Netflix
+                NETFLIX
             </h2>
             <nav>
                 <a href="#">Inicio</a>
@@ -22,7 +22,23 @@
             </nav>
         </div>
     </header>
-
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARD</h3>
+                <p class="descricao">Nada pode impedir o politico sem escrupulos Frank Underwood de conquistar whashington</p>
+                
+            <div>
+                <button role="button" class="botao">
+                    Assistir agora
+                </button>
+                <button role="button" class="botao">
+                    Mais informações..
+                </button>
+            </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
