--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 
             <div>
                 <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
                     Assistir agora
                 </button>
                 <button role="button" class="botao">
