--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
+
+    <!--owl css-->
+
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>Netflix clone</title>
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-menu">
             <h2 class="logo">
-                NETFLIX
+                NETFLIX 
             </h2>
             <nav>
                 <a href="#">Inicio</a>
@@ -26,20 +32,57 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">HOUSE OF CARD</h3>
-                <p class="descricao">Nada pode impedir o politico sem escrupulos Frank Underwood de conquistar whashington</p>
+                <p class="descricao">Nada pode impedir o politico sem escrupulos Frank Underwood de conquistar whashington. Voce não perder por esperar essa jornada em dupla.</p>
                 
-            <div>
-                <button role="button" class="botao">
-                    <i class="fas fa-play"></i>
-                    Assistir agora
-                </button>
-                <button role="button" class="botao">
-                    Mais informações..
-                </button>
-            </div>
+                <div>
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                       Assistir agora
+                    </button>
+                    <button role="button" class="botao">
+                         <i class="fas fa-info-circle"></i>
+                        Mais informações...
+                    </button>
+                </div>
             </div>
         </div>
     </main>
-    
+
+<div class="carrosel-filmes">
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img class="box-filme" src="img/mini1.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini3.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini4.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini5.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini6.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini7.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini8.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini9.jpg" alt="foto1">
+        </div>
+        <div class="item">
+            <img class="box-filme" src="img/mini10.jpg" alt="foto1">
+        </div>
+    </div>
+</div>
+
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
 </html>
